--- a/.github/workflows/generate_appcast.yml
+++ b/.github/workflows/generate_appcast.yml
@@ -73,17 +73,20 @@ jobs:
           # Helper: EdDSA (Sparkle 2) signing
           get_signature() {
             local dmg="$1"
-            local key="${{ secrets.SPARKLE_PRIVATE_KEY }}"
+            # Clean the key of any whitespace/newlines
+            local key=$(echo "${{ secrets.SPARKLE_PRIVATE_KEY }}" | tr -d '\n\r ')
             
-            # Run sign_update and capture output
-            local sig=$(sign_update -s "$key" "$dmg" 2>/dev/null)
-            if [ $? -eq 0 ] && [ -n "$sig" ]; then
+            # Run sign_update and capture only the last line (the signature)
+            local sig=$(sign_update -s "$key" "$dmg" 2>/dev/null | tail -n 1 | tr -d '\n\r ')
+            
+            # Validate that it looks like a base64 signature (approx 88 chars for Ed25519)
+            if [[ -n "$sig" && "$sig" =~ ^[A-Za-z0-9+/=]{80,90}$ ]]; then
               echo "$sig"
               return 0
             fi
             
-            echo "ERROR: sign_update failed for $dmg" >&2
-            # Show error in logs by running again without suppression
+            echo "ERROR: sign_update failed to produce a valid signature for $dmg" >&2
+            # Show actual error in logs for debugging
             sign_update -s "$key" "$dmg" || true
             return 1
           }
@@ -130,15 +133,19 @@ jobs:
           # Helper: EdDSA (Sparkle 2) signing
           get_signature() {
             local dmg="$1"
-            local key="${{ secrets.SPARKLE_PRIVATE_KEY }}"
+            # Clean the key of any whitespace/newlines
+            local key=$(echo "${{ secrets.SPARKLE_PRIVATE_KEY }}" | tr -d '\n\r ')
             
-            local sig=$(sign_update -s "$key" "$dmg" 2>/dev/null)
-            if [ $? -eq 0 ] && [ -n "$sig" ]; then
+            # Run sign_update and capture only the last line (the signature)
+            local sig=$(sign_update -s "$key" "$dmg" 2>/dev/null | tail -n 1 | tr -d '\n\r ')
+            
+            # Validate that it looks like a base64 signature
+            if [[ -n "$sig" && "$sig" =~ ^[A-Za-z0-9+/=]{80,90}$ ]]; then
               echo "$sig"
               return 0
             fi
             
-            echo "ERROR: sign_update failed for $dmg" >&2
+            echo "ERROR: sign_update failed to produce a valid signature for $dmg" >&2
             return 1
           }
 
