--- a/.github/workflows/generate_appcast.yml
+++ b/.github/workflows/generate_appcast.yml
@@ -73,21 +73,21 @@ jobs:
           # Helper: EdDSA (Sparkle 2) signing
           get_signature() {
             local dmg="$1"
-            # Clean the key of any whitespace/newlines
-            local key=$(echo "${{ secrets.SPARKLE_PRIVATE_KEY }}" | tr -d '\n\r ')
+            # Clean the key and export it as the environment variable Sparkle expects
+            export SPARKLE_ED_PRIVATE_KEY=$(echo "${{ secrets.SPARKLE_PRIVATE_KEY }}" | tr -d '\n\r ')
             
-            # Run sign_update and capture only the last line (the signature)
-            local sig=$(sign_update -s "$key" "$dmg" 2>/dev/null | tail -n 1 | tr -d '\n\r ')
+            # Run sign_update (it will automatically use the env var)
+            # Capture only the signature string from stdout
+            local sig=$(sign_update "$dmg" 2>/dev/null | tail -n 1 | tr -d '\n\r ')
             
-            # Validate that it looks like a base64 signature (approx 88 chars for Ed25519)
             if [[ -n "$sig" && "$sig" =~ ^[A-Za-z0-9+/=]{80,90}$ ]]; then
               echo "$sig"
               return 0
             fi
             
             echo "ERROR: sign_update failed to produce a valid signature for $dmg" >&2
-            # Show actual error in logs for debugging
-            sign_update -s "$key" "$dmg" || true
+            # Debug: show actual output without suppression
+            sign_update "$dmg" || true
             return 1
           }
 
@@ -133,13 +133,13 @@ jobs:
           # Helper: EdDSA (Sparkle 2) signing
           get_signature() {
             local dmg="$1"
-            # Clean the key of any whitespace/newlines
-            local key=$(echo "${{ secrets.SPARKLE_PRIVATE_KEY }}" | tr -d '\n\r ')
+            # Clean the key and export it as the environment variable Sparkle expects
+            export SPARKLE_ED_PRIVATE_KEY=$(echo "${{ secrets.SPARKLE_PRIVATE_KEY }}" | tr -d '\n\r ')
             
-            # Run sign_update and capture only the last line (the signature)
-            local sig=$(sign_update -s "$key" "$dmg" 2>/dev/null | tail -n 1 | tr -d '\n\r ')
+            # Run sign_update (it will automatically use the env var)
+            # Capture only the signature string from stdout
+            local sig=$(sign_update "$dmg" 2>/dev/null | tail -n 1 | tr -d '\n\r ')
             
-            # Validate that it looks like a base64 signature
             if [[ -n "$sig" && "$sig" =~ ^[A-Za-z0-9+/=]{80,90}$ ]]; then
               echo "$sig"
               return 0
